--- a/continuous_signals/operations.ipynb
+++ b/continuous_signals/operations.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Continuous Signals\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## Elementary Operations\n",
     "\n",
-    "Operations like superposition, temporal shifting and scaling can be used to construct signals with a more complex structure than the introduced [standard signals](standard_signals.ipynb). A set of elementary operations is introduced in the following that are frequently used in signal processing for this purpose."
+    "Operations like superposition, temporal shifting and scaling are used to construct signals with a more complex structure than the previously introduced [standard signals](standard_signals.ipynb). A set of elementary operations is introduced that are frequently used in signal processing."
    ]
   },
   {
@@ -57,9 +57,9 @@
     "t = sym.symbols('t', real=True)\n",
     "\n",
     "A = .3\n",
-    "om1=3\n",
+    "om1 = 3\n",
     "B = .5\n",
-    "om2=5\n",
+    "om2 = 5\n",
     "\n",
     "x = A*sym.cos(om1*t) + B*sym.cos(om2*t)\n",
     "\n",
@@ -114,9 +114,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise**\n",
+    "\n",
+    "* Add another step to the beginning of the staircase signal by modifying above example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Temporal Scaling\n",
     "\n",
-    "The temporally scaling of a signal $s(t)$ is defined as\n",
+    "The temporal scaling of a signal $s(t)$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
     "x(t) = s(a \\cdot t)\n",
@@ -158,8 +167,8 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Change above example such that the signal is compressed.\n",
-    "* Change above example such that the signal is scaled and time reversed. What scaling factor `a` leads to a stretching/compression in this context?"
+    "* Modify above example such that the signal is compressed.\n",
+    "* Modify above example such that the signal is scaled and time reversed. What scaling factor `a` leads to a stretching/compression in this context?"
    ]
   },
   {
@@ -179,9 +188,9 @@
     "x(t) = s(\\tau - t)\n",
     "\\end{equation}\n",
     "\n",
-    "for $\\tau \\in \\mathbb{R}$. As $s(\\tau - t) = s(- (t - \\tau))$ the flipping operation can also be represented as a time-reversal of the signal $s(t)$ followed by a delay of $\\tau$ of the reversed signal. For $\\tau = 0$ this results in only a time-reversal of the signal. \n",
+    "for $\\tau \\in \\mathbb{R}$. As $s(\\tau - t) = s(- (t - \\tau))$ the flipping operation can also be represented as a time-reversal of the signal $s(t)$ followed by a shift of $\\tau$ of the reversed signal. For $\\tau = 0$ this results in only a time-reversal of the signal. \n",
     "\n",
-    "The operation can interpreted geometrically as a mirroring of the signal $s(t)$ at the vertical axis $t=\\frac{\\tau}{2}$. "
+    "The temporal flipping operation can interpreted geometrically as a mirroring of the signal $s(t)$ at the vertical axis $t=\\frac{\\tau}{2}$."
    ]
   },
   {
@@ -190,7 +199,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The following example illustrates the temporal flipping of the staircase signal $x(t)$ introduced above."
+    "The following example illustrates the temporal flipping of the staircase signal $x(t)$ introduced before."
    ]
   },
   {
@@ -221,19 +230,9 @@
     "nbsphinx": "hidden"
    },
    "source": [
-    "### Copyright\n",
+    "**Copyright**\n",
     "\n",
-    "<p xmlns:dct=\"http://purl.org/dc/terms/\">\n",
-    "  <a rel=\"license\"\n",
-    "     href=\"http://creativecommons.org/publicdomain/zero/1.0/\">\n",
-    "    <img src=\"http://i.creativecommons.org/p/zero/1.0/88x31.png\" style=\"border-style: none;\" alt=\"CC0\" />\n",
-    "  </a>\n",
-    "  <br />\n",
-    "  To the extent possible under law,\n",
-    "  <span rel=\"dct:publisher\" resource=\"[_:publisher]\">the person who associated CC0</span>\n",
-    "  with this work has waived all copyright and related or neighboring\n",
-    "  rights to this work.\n",
-    "</p>"
+    "The notebook is provided as [Open Educational Resource](https://de.wikipedia.org/wiki/Open_Educational_Resources). Feel free to use the notebook for your own educational purposes. The text is licensed under [Creative Commons Attribution 4.0](https://creativecommons.org/licenses/by/4.0/), the code of the IPython examples under the [MIT license](https://opensource.org/licenses/MIT). Please attribute the work as follows: *Signals and Systems* by Sascha Spors."
    ]
   }
  ],
@@ -253,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
