--- a/continuous_signals/standard_signals.ipynb
+++ b/continuous_signals/standard_signals.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = x.subs({omega: 5, sigma : -.5})\n",
+    "y = x.subs({omega: 10, sigma : -.1})\n",
     "\n",
     "sym.plot(sym.re(y), (t, 0, 2*sym.pi), ylabel=r'Re{$e^{st}$}')\n",
     "sym.plot(sym.im(y), (t, 0, 2*sym.pi), ylabel=r'Im{$e^{st}$}');"
@@ -193,10 +193,10 @@
     "The Heaviside signal is defined by the [Heaviside step function](https://en.wikipedia.org/wiki/Heaviside_step_function)\n",
     "\n",
     "\\begin{equation}\n",
-    "\\epsilon(t) = \\begin{cases} 0 & t<0 \\\\  1 & t \\geq 0 \\end{cases}\n",
+    "\\epsilon(t) = \\begin{cases} 0 & t<0 \\\\  \\frac{1}{2} & t=0 \\\\ 1 & t > 0 \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that different definitions exist that differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal is used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
+    "Note that alternative definitions exist that differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal is used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_{-\\infty}^{t} \\delta(\\tau) \\; d\\tau = \\epsilon(t)\n",
@@ -261,10 +261,10 @@
     "The rectangular signal is defined by the [rectangular function](https://en.wikipedia.org/wiki/Rectangular_function)\n",
     "\n",
     "\\begin{equation}\n",
-    "\\text{rect}(t) = \\begin{cases} 1 & \\text{for } |t| < \\frac{1}{2} \\\\ 0 & \\text{otherwise}  \\end{cases}\n",
+    "\\text{rect}(t) = \\begin{cases} 1 & |t| < \\frac{1}{2} \\\\ \\frac{1}{2} & |t| = \\frac{1}{2} \\\\ 1 & |t| > \\frac{1}{2} \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that different definitions exist that differ with respect to the value of $\\text{rect}(t)$ at $t = \\pm \\frac{1}{2}$. The rectangular signal is used to represent a signal which is switched on for a limited period of time or has finite duration. The rectangular signal can be related to the Heaviside signal by\n",
+    "Note that alternative definitions exist that differ with respect to the value of $\\text{rect}(t)$ at $t = \\pm \\frac{1}{2}$. The rectangular signal is used to represent a signal which is switched on for a limited period of time or has finite duration. The rectangular signal can be related to the Heaviside signal by\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{rect}(t) = \\epsilon \\left(t + \\frac{1}{2} \\right) - \\epsilon \\left(t - \\frac{1}{2} \\right)\n",
@@ -323,7 +323,7 @@
     "\\text{sgn}(t) = \\begin{cases} 1 & t>0 \\\\ 0 & t=0 \\\\ -1 & t < 0  \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "The sign signal is useful to represent the absolute value of a signal $x(t)$ by a multiplication\n",
+    "The sign signal is useful to represent the absolute value of a real-valued signal $x(t) \\in \\mathbb{R}$ by a multiplication\n",
     "\n",
     "\\begin{equation}\n",
     "|x(t)| = x(t) \\cdot \\text{sgn}(x(t))\n",
