--- a/systems_time_domain/impulse_response.ipynb
+++ b/systems_time_domain/impulse_response.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Characterization of Systems in the Time Domain\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -37,19 +37,19 @@
     "\n",
     "where $\\mathcal{H} \\{\\cdot\\}$ was only applied to the Dirac impulse, since $x(\\tau)$ can be regarded as constant factor with respect to the time $t$. It is obvious that the response of a system to a Dirac impulse plays an important role in the calculation of the output signal for arbitrary input signals. \n",
     "\n",
-    "The response of a system to a Dirac impulse as input is denoted as [*impulse response*](https://en.wikipedia.org/wiki/Impulse_response). It is defined as\n",
+    "The response of a system to a Dirac impulse as input signal is denoted as [*impulse response*](https://en.wikipedia.org/wiki/Impulse_response). It is defined as\n",
     "\n",
     "\\begin{equation}\n",
     "h(t) = \\mathcal{H} \\left\\{ \\delta(t) \\right\\}\n",
     "\\end{equation}\n",
     "\n",
-    "If the system is time-invariant, the response to a shifted Diract impulse is $\\mathcal{H} \\left\\{ \\delta(t-\\tau) \\right\\} = h(t-\\tau)$. Hence, for an LTI system we finally get\n",
+    "If the system is time-invariant, the response to a shifted Dirac impulse is $\\mathcal{H} \\left\\{ \\delta(t-\\tau) \\right\\} = h(t-\\tau)$. Hence, for an LTI system we finally get\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\int_{-\\infty}^{\\infty}  x(\\tau) \\cdot h(t-\\tau) \\; d \\tau \n",
     "\\end{equation}\n",
     "\n",
-    "Due to its relevance in the theory of LTI systems, this operation is termed as [*convolution*](https://en.wikipedia.org/wiki/Convolution). It is commony abbreviated by $*$, hence $y(t) = x(t) * h(t)$.\n",
+    "Due to its relevance in the theory of LTI systems, this operation is explicitly termed as [*convolution*](https://en.wikipedia.org/wiki/Convolution). It is commonly abbreviated by $*$, hence for above integral we get $y(t) = x(t) * h(t)$.\n",
     "\n",
     "The properties of an LTI system are entirely characterized by its impulse response. The response $y(t)$ of a system to an arbitrary input signal $x(t)$ is given by the convolution of the input signal $x(t)$ with its impulse response $h(t)$."
    ]
@@ -60,7 +60,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The follwing example considers an LTI system whose relation between input $x(t)$ and output $y(t)$ is given by an ordinary differential equation (ODE) with constant coefficients\n",
+    "The following example considers an LTI system whose relation between input $x(t)$ and output $y(t)$ is given by an ordinary differential equation (ODE) with constant coefficients\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) + \\frac{d}{dt} y(t) = x(t)\n",
@@ -68,7 +68,7 @@
     "\n",
     "The system response is computed for $x(t) = e^{- 2 t} \\cdot \\epsilon(t)$ by \n",
     "\n",
-    "1. explicitely solving the ODE and by \n",
+    "1. explicitly solving the ODE and by \n",
     "2. computing the impulse response $h(t)$ and convolution with the input signal.\n",
     "\n",
     "The solution should fulfill the initial conditions $y(t)\\big\\vert_{t = 0-} = 0$ and $\\frac{d}{dt}y(t)\\big\\vert_{t = 0-} = 0$ due to causality.\n",
@@ -242,9 +242,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
