Rotated illustration, revised text

--- a/systems_time_domain/spring_pendulum_analysis.ipynb
+++ b/systems_time_domain/spring_pendulum_analysis.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "![Damped spring pendulum](damped_spring.png)\n",
     "\n",
-    "A rigid body of mass $m$ is hanging on a spring with stiffness $k$ connected to a wall. A damper with viscous damping coefficient $c$ is mounted parallel to the spring to model the friction present in the system. It is assumed that the movement of the mass over time is restricted to the vertical axis, here denoted by $y$. It is assumed that the mass is in its idle position for $t<0$. The pretension of the spring by the mass can be neglected this way. It is furthermore assumed that the mass is not moving for $t<0$. Denoting the displacement of the mass over time with $y(t)$, these initial conditions are formulated as $y(t) = 0$ and $\\frac{d y(t)}{dt} = 0$ for $t<0$.\n",
+    "A rigid body of mass $m$ is mounted on a spring with stiffness $k$ which is connected to the ground. A damper with viscous damping coefficient $c$ is mounted parallel to the spring to model the friction present in the system. It is assumed that the movement of the mass over time is restricted to the vertical axis, here denoted by $y$. It is assumed further that the mass is in its idle position for $t<0$. The pretension of the spring by the mass can be neglected this way. It is additionally assumed that the mass is not moving for $t<0$. Denoting the displacement of the mass over time with $y(t)$, these initial conditions are formulated as $y(t) = 0$ and $\\frac{d y(t)}{dt} = 0$ for $t<0$.\n",
     "\n",
     "The normalized values $m = 0.1$, $c = 0.1$, $k = 2.5$ are used for illustration in the following."
    ]
@@ -98,7 +98,7 @@
    "source": [
     "### Impulse Response\n",
     "\n",
-    "The LTI system corresponding to the pendulum can be characterized by its [impulse response](impulse_response.ipynb) $h(t)$. It is defined as the output of the system for a Dirac impulse $x(t) = \\delta(t)$ at the input. Physically this can be approximated by hitting the mass. The impulse response characterizes then the movement after such an event.\n",
+    "The LTI system corresponding to the pendulum can be characterized by its [impulse response](impulse_response.ipynb) $h(t)$. It is defined as the output of the system for a Dirac impulse $x(t) = \\delta(t)$ at the input. Physically this can be approximated by hitting the mass. The impulse response characterizes the movement $y(t)$ of the mass after such an event.\n",
     "\n",
     "First the ODE of the spring pendulum is defined in `SymPy`"
    ]
@@ -346,17 +346,22 @@
    "source": [
     "### Application: Vibration Isolation\n",
     "\n",
-    "An application of above example is the design of [vibration isolation](https://en.wikipedia.org/wiki/Vibration_isolation) by a damped spring pendulum as used for vibrating machinery. Assume that the\n",
-    "system can only move in the vertical direction. The vertical component of the centrifugal force of an imbalanced rotating system mounted onto the mass can be modeled as\n",
+    "An application of above example is the design of [vibration isolation](https://en.wikipedia.org/wiki/Vibration_isolation) by a damped spring pendulum. An typical example is a rotating machinery which has some sort of imbalance. Assuming that the imbalance can be modeled as a rotating mass, the external force $F_\\text{E}(t)$ is given by the vertical component of its [centrifugal force](https://en.wikipedia.org/wiki/Centrifugal_force)\n",
     "\n",
     "\\begin{equation}\n",
-    "F_\\text{E}(t) = F_0 \\cos(\\omega t) = F_0 \\cdot \\Re \\{e^{j \\omega t} \\}\n",
+    "F_\\text{E}(t) = F_0 \\sin(\\omega t) = F_0 \\cdot \\Im \\{e^{j \\omega t} \\}\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\omega$ denotes the angular frequency of the rotating machinery and $F_0$ the amplitude of the force. Since $e^{j \\omega t}$ is an eigenfunction of the LTI system, the resulting displacement is then given as\n",
+    "where $\\omega$ denotes the angular frequency of the rotating machinery and \n",
     "\n",
     "\\begin{equation}\n",
-    "y(t) = F_0 \\cdot \\Re \\{e^{j \\omega t} H(j \\omega) \\}\n",
+    "F_0 = m_\\text{I} r \\omega^2 \n",
+    "\\end{equation}\n",
+    "\n",
+    "the amplitude of the force with $m_\\text{I}$ denoting the mass of the imbalance and $r$ the radius of its circular orbit. Since $e^{j \\omega t}$ is an eigenfunction of the LTI system, the resulting displacement is then given as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "y(t) = F_0 \\cdot \\Im \\{e^{j \\omega t} H(j \\omega) \\}\n",
     "\\end{equation}\n",
     "\n",
     "The aim of vibration isolation is to keep the magnitude of the displacement as low as possible."
@@ -368,9 +373,11 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* For which angular frequencies $\\omega$ is the magnitude of the displacement largest? How is the phase relation between the external force $F_\\text{E}(t)$ and displacement $y(t)$ at these frequencies.\n",
+    "* Compute and plot the displacement for given $m_\\text{I}$ and $r$.\n",
     "\n",
-    "* How should the resonance frequencies $\\omega_0$ of the spring pendulum be chosen in order to get a good vibration isolation for a machine rotating with angular frequency $\\omega$? How is the phase relation between the external force $F_\\text{E}(t)$ and displacement $y(t)$ at this frequency.\n"
+    "* For which angular frequencies $\\omega$ is the magnitude of the displacement largest? How is the phase relation between the external force $F_\\text{E}(t)$ and displacement $y(t)$ at these frequencies?\n",
+    "\n",
+    "* How should the resonance frequencies $\\omega_0$ of the spring pendulum be chosen in order to get a good vibration isolation for a machine rotating with angular frequency $\\omega$? How is the phase relation between the external force $F_\\text{E}(t)$ and displacement $y(t)$ at this frequency?\n"
    ]
   },
   {
