--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -250,6 +250,46 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relation to the Fourier-Transform\n",
+    "\n",
+    "The Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a signal $x(t)$ can be related to its Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ by inspecting the kernels of both transforms. The Laplace transform has the complex exponential function $e^{- s t}$ with $s \\in \\mathbb{C}$ as kernel. The [Fourier transform](../fourier_transform/definition.ipynb), as introduced before, has the harmonic exponential function $e^{- j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $s = \\sigma + j \\omega$. Hence, if the ROC includes the imaginary axis $s = j \\omega$ of the $s$-plane, the Fourier transform of a signal $x(t)$ can be derived from its Laplace transform by\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathcal{F} \\{ x(t) \\} = \\mathcal{L} \\{ x(t) \\} \\bigr\\rvert_{s = j \\omega}\n",
+    "\\end{equation}\n",
+    "\n",
+    "If the ROC does not include the imaginary axis, the Fourier transform of a given signal $x(t)$ does not exist. An benefit of the Laplace over the Fourier transform is that it can be applied to a wider class of signals. As shown later, the one-sided Laplace transform also allows to conveniently consider initial values of differential equations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example**\n",
+    "\n",
+    "The Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ of the causal exponential signal\n",
+    "\n",
+    "\\begin{equation}\n",
+    "x(t) = \\epsilon(t) \\cdot e^{- \\alpha t} \n",
+    "\\end{equation}\n",
+    "\n",
+    "with $\\alpha \\in \\mathbb{R}^+$ is derived from the Laplace transform of the [causal complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal). Using the substituting $s_0 = \\alpha$ yields\n",
+    "\n",
+    "\\begin{equation}\n",
+    "X(s) = \\frac{1}{s + \\alpha}\n",
+    "\\end{equation}\n",
+    "\n",
+    "with the ROC $\\Re \\{ s \\} > - \\alpha$. Hence for $0 < \\alpha < \\infty$, the ROC includes the imaginary axis. The Fourier transform can be derived from the Laplace transform as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "X(j \\omega) = \\frac{1}{j \\omega + \\alpha}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -276,9 +316,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
