--- a/laplace_transform/definition.ipynb
+++ b/laplace_transform/definition.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# The Laplace Transform\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## Definition\n",
     "\n",
-    "The [Laplace transform](https://en.wikipedia.org/wiki/Laplace_transform), as the [Fourier transform](../fourier_transform/definition.ipynb), is an integral transform which represents a signal $x(t)$ in the frequency domain. Unlike the Fourier transform which uses the harmonic complex exponential function $e^{j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel, the Laplace transformation bases on the complex exponential function $e^{s t}$ with $s \\in \\mathbb{C}$ as kernel. The Laplace transform is named after its discoverer [Pierre-Simon Laplace](https://en.wikipedia.org/wiki/Pierre-Simon_Laplace)."
+    "The [Laplace transform](https://en.wikipedia.org/wiki/Laplace_transform) is an integral transform which represents a signal $x(t)$ in the spectral domain. It features the complex exponential function $e^{s t}$ with $s \\in \\mathbb{C}$ as kernel. Note, the same functions constitute eigenfunctions of linear time-invariant (LTI) systems. The Laplace transform is named after its discoverer [Pierre-Simon Laplace](https://en.wikipedia.org/wiki/Pierre-Simon_Laplace)."
    ]
   },
   {
@@ -34,7 +34,7 @@
     "\n",
     "where $X(s) = \\mathcal{L} \\{ x(t) \\}$ denotes the Laplace transform of $x(t)$. A complex signal $x(t) \\in \\mathbb{C}$ with real-valued dependent variable $t \\in \\mathbb{R}$ is represented by its complex valued Laplace transform $X(s) \\in \\mathbb{C}$ with complex dependent variable $s \\in \\mathbb{C}$. The variable $s$ can be interpreted as [complex frequency](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $s = \\sigma + j \\omega$ with $\\sigma, \\omega \\in \\mathbb{R}$.\n",
     "\n",
-    "Whether a Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ exists depends on the complex frequency $s$ and the signal $x(t)$ itself. All values $s$ for which the Laplace transform converges form a [*region of convergence*](https://en.wikipedia.org/wiki/Radius_of_convergence) (ROC). The Laplace transforms of two different signals may differ only with respect to the ROC. Consequently, the ROC needs to be explicitly given for unique inversion of the Laplace transform."
+    "Whether a Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ exists depends on the complex frequency $s$ and the signal $x(t)$ itself. All values $s$ for which the Laplace transform converges form a [*region of convergence*](https://en.wikipedia.org/wiki/Radius_of_convergence) (ROC). The Laplace transforms of two different signals may differ only with respect to their ROCs. Consequently, the ROC needs to be explicitly given for an unique inversion of the Laplace transform."
    ]
   },
   {
@@ -130,7 +130,7 @@
     "&= \\frac{1}{s + s_0}\n",
     "\\end{align}\n",
     "\n",
-    "The Laplace transform converges only for $\\Re \\{ s + s_0 \\} > 0$. Hence, the ROC is given as\n",
+    "As can be concluded from the limit case above, the Laplace transform converges only for $\\Re \\{ s + s_0 \\} > 0$. Hence, the ROC is given as\n",
     "\n",
     "\\begin{equation}\n",
     "\\Re \\{ s \\} > \\Re \\{ - s_0 \\} \n",
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function returns three results. Its first element is the Laplace transform $X(s)$, the second element $a$ is the half-plane of convergence with $\\Re \\{ s \\} > a$ the third element are auxiliary convergence conditions."
+    "The function returns three results. Its first element is the Laplace transform $X(s)$, the second element $a$ is the half-plane of convergence with $\\Re \\{ s \\} > a$ the third element is an auxiliary convergence condition."
    ]
   },
   {
@@ -205,46 +205,6 @@
     "![Region of convergence for left-/two-/right-sided signal](ROC.png)\n",
     "\n",
     "The gray areas denote the values $s$ for which the Laplace transformation converges. The borders $a$ of these areas (dashed lines) depend on the signal $s(t)$. A more detailed discussion of the ROCs for the Laplace transform can be found in the literature, e.g. [[Girod et al.](index.ipynb#Literature)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Relation to the Fourier-Transform\n",
-    "\n",
-    "The Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a signal $x(t)$ can be related to its Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ by inspecting the kernels of both transforms. The Laplace transform has the complex exponential function $e^{- s t}$ with $s \\in \\mathbb{C}$ as kernel. The [Fourier transform](../fourier_transform/definition.ipynb), as introduced before, has the harmonic exponential function $e^{- j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $s = \\sigma + j \\omega$. Hence, if the ROC includes the imaginary axis $s = j \\omega$ of the $s$-plane, the Fourier transform of a signal $x(t)$ can be derived from its Laplace transform by\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\mathcal{F} \\{ x(t) \\} = \\mathcal{L} \\{ x(t) \\} \\bigr\\rvert_{s = j \\omega}\n",
-    "\\end{equation}\n",
-    "\n",
-    "If the ROC does not include the imaginary axis, the Fourier transform of a given signal $x(t)$ does not exist. An benefit of the Laplace over the Fourier transform is that it can be applied to a wider class of signals. As shown later, the one-sided Laplace transform also allows to conveniently consider initial values of differential equations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Example**\n",
-    "\n",
-    "The Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ of the causal exponential signal\n",
-    "\n",
-    "\\begin{equation}\n",
-    "x(t) = \\epsilon(t) \\cdot e^{- \\alpha t} \n",
-    "\\end{equation}\n",
-    "\n",
-    "with $\\alpha \\in \\mathbb{R}^+$ is derived from the Laplace transform of the [causal complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal). Using the substituting $s_0 = \\alpha$ yields\n",
-    "\n",
-    "\\begin{equation}\n",
-    "X(s) = \\frac{1}{s + \\alpha}\n",
-    "\\end{equation}\n",
-    "\n",
-    "with the ROC $\\Re \\{ s \\} > - \\alpha$. Hence for $0 < \\alpha < \\infty$, the ROC includes the imaginary axis. The Fourier transform can be derived from the Laplace transform as\n",
-    "\n",
-    "\\begin{equation}\n",
-    "X(j \\omega) = \\frac{1}{j \\omega + \\alpha}\n",
-    "\\end{equation}"
    ]
   },
   {
@@ -294,7 +254,7 @@
     "X(s) = \\frac{1}{s + s_0} \\qquad \\text{for } \\Re \\{ s \\} > \\Re \\{ - s_0 \\}\n",
     "\\end{equation}\n",
     "\n",
-    "is illustrated by plotting its magnitude $|X(s)|$ over the $s$-plane $s = \\sigma + j \\omega$ for $s_0 = 1 + j$"
+    "is illustrated by plotting its magnitude $|X(s)|$ in the $s$-plane $s = \\sigma + j \\omega$ for $s_0 = 1 + j$"
    ]
   },
   {
@@ -425,9 +385,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
