--- a/fourier_transform/properties.ipynb
+++ b/fourier_transform/properties.ipynb
@@ -114,7 +114,7 @@
     "\\mathcal{F} \\{ x_2(j t) \\} = 2 \\pi \\cdot x_1(- \\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "The duality principle of the Fourier transformation allows to carry over results from the time-domain to the spectral-domain and vice-versa. It can be used to derive new transforms from known transforms. This is illustrated at an example."
+    "The duality principle of the Fourier transformation allows to carry over results from the time-domain to the spectral-domain and vice-versa. It can be used to derive new transforms from known transforms. This is illustrated at an example. Note, that the Laplace transformation shows no duality. This is due to the mapping from a complex signal $x(t)$ with real valued independent variable $t \\in \\mathbb{R}$ to its complex transform $X(s) \\in \\mathbb{C}$ with complex independent variable $s \\in \\mathbb{C}$."
    ]
   },
   {
@@ -311,9 +311,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
