Reorganization due to reorderung of Laplace and Fourier transform, revisions

--- a/fourier_transform/theorems.ipynb
+++ b/fourier_transform/theorems.ipynb
@@ -298,11 +298,7 @@
    "source": [
     "### Integration Theorem\n",
     "\n",
-    "Let's assume a signal $x(t)$ for which the integral $\\int_{-\\infty}^{t} x(\\tau) \\; d\\tau$ exists. The integration can be regarded as inverse operation to the temporal derivative. The integration can be represented as convolution with the rectangular signal $\\epsilon(t)$\n",
-    "\n",
-    "![Representation of an integration as convolution](integration_as_convolution.png)\n",
-    "\n",
-    "leading to the following relation\n",
+    "Let's assume a signal $x(t)$ for which the integral $\\int_{-\\infty}^{t} x(\\tau) \\; d\\tau$ exists. The integration can be regarded as inverse operation to the temporal derivative. The integration can be represented as convolution with the rectangular signal $\\epsilon(t)$ ([see integration theorem of the Laplace transform](../laplace_transform/theorems.ipynb#Integration-Theorem))\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_{-\\infty}^{t} x(\\tau) \\; d\\tau = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot \\epsilon(t - \\tau) \\; d\\tau = x(t) * \\epsilon(t)\n",
@@ -636,9 +632,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
