--- a/laplace_transform/theorems.ipynb
+++ b/laplace_transform/theorems.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# The Laplace Transform\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "\\mathcal{L} \\{ x(a t) \\} = \\frac{1}{|a|} \\cdot X \\left( \\frac{s}{a} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The Laplace transformation of a temporally scaled signal is given by weighting the inversely scaled Laplace transform of the unscaled signal with $\\frac{1}{|a|}$. The scaling of the Laplace transform can be interpreted as a scaling of the $s$-plane. The region of convergence (ROC) of the temporally scaled signal $x(a t)$ is consequently the inversely scaled ROC of the unscaled signal $x(t)$\n",
+    "The Laplace transformation of a temporally scaled signal is given by weighting the inversely scaled Laplace transform of the unscaled signal with $\\frac{1}{|a|}$. The scaling of the Laplace transform can be interpreted as a scaling of the complex $s$-plane. The region of convergence (ROC) of the temporally scaled signal $x(a t)$ is consequently the inversely scaled ROC of the unscaled signal $x(t)$\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{ROC} \\{ x(a t) \\} = \\left\\{ s: \\frac{s}{a} \\in \\text{ROC} \\{ x(t) \\} \\right\\}\n",
@@ -81,7 +81,7 @@
     "\n",
     "![Representation of an LTI system in the time- and Laplace-domain](LTI_system_Laplace_domain.png)\n",
     "\n",
-    "Calculation of the system response by transforming the problem into the Laplace domain can be beneficial since this replaces the evaluation of the convolution integral by a scalar multiplication. In many cases this procedure simplifies the calculation of the system response significantly. A prominent example is the [analysis of a passive electrical network](network_analysis.ipynb). The convolution theorem can also be useful to derive an unknown Laplace transform. The key is here to express the signal as convolution of two other signals for which the Laplace transforms are known. This is illustrated with the following example."
+    "Calculation of the system response by transforming the problem into the Laplace domain can be beneficial since this replaces the evaluation of the convolution integral by a scalar multiplication. In many cases this procedure simplifies the calculation of the system response significantly. A prominent example is the [analysis of a passive electrical network](network_analysis.ipynb). The convolution theorem can also be useful to derive an unknown Laplace transform. The key is here to express the signal as convolution of two other signals for which the Laplace transforms are known. This is illustrated by the following example."
    ]
   },
   {
@@ -238,19 +238,7 @@
     "\\text{ROC} \\{ \\text{rect}(t) \\} = \\mathbb{C}\n",
     "\\end{equation}\n",
     "\n",
-    "The Laplace transform of the rectangular signals result resembles with [its Fourier transform](../fourier_transform/definition.ipynb#Transformation-of-the-Rectangular-Signal)\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\mathcal{F} \\{ \\text{rect}(t) \\} = \\frac{\\sin \\left( \\frac{\\omega}{2} \\right) }{\\frac{\\omega}{2}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Using $\\sinh (s) = -j \\sin(j s)$ and $s = j \\omega$ relates the Fourier to the Laplace transform of the rectangular signal\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\frac{\\sinh \\left( \\frac{s}{2} \\right) }{\\frac{s}{2}} \\Bigg\\vert_{s= j \\omega} = \\frac{\\sin \\left( \\frac{\\omega}{2} \\right) }{\\frac{\\omega}{2}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "For illustration the magnitude of the Laplace transform $|X(s)|$ is plotted in the $s$-plane, as well as the Laplace transform $X(\\sigma)$ and $X(j \\omega)$ for the real and imaginary part of the complex frequency $s$."
+    "For illustration, the magnitude of the Laplace transform $|X(s)|$ is plotted in the $s$-plane, as well as $X(\\sigma)$ and $X(j \\omega)$ for the real and imaginary part of the complex frequency $s = \\sigma + j \\omega$."
    ]
   },
   {
@@ -277,14 +265,16 @@
     "**Exercise**\n",
     "\n",
     "* Derive the Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of the causal rectangular signal $x(t) = \\text{rect} (a t - \\frac{1}{2 a})$\n",
-    "* Derive the Laplace transform of the [triangular signal](../fourier_transform/theorems.ipynb#Transformation-of-the-triangular-signal) $x(t) = \\Lambda(a t)$ with $a \\in \\mathbb{R}$"
+    "* Derive the Laplace transform of the [triangular signal](../fourier_transform/theorems.ipynb#Transformation-of-the-triangular-signal) $x(t) = \\Lambda(a t)$ with $a \\in \\mathbb{R} \\setminus \\{0\\}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Differentiation Theorem"
+    "### Differentiation Theorem\n",
+    "\n",
+    "Derivatives of signals are the fundamental operations of differential equations. Ordinary differential equations (ODEs) with constant coefficients play an important role in the theory of time-invariant (LTI) systems. Consequently, the representation of the derivative of a signal in the Laplace domain is of special interest."
    ]
   },
   {
@@ -345,13 +335,17 @@
    "source": [
     "### Integration Theorem\n",
     "\n",
-    "A integrable signal $x(t)$ for which the integral $\\int_{-\\infty}^{t} x(\\tau) \\; d\\tau$ exists is given. The integration can be represented as convolution with the rectangular signal $\\epsilon(t)$ ([see integration theorem of the Fourier transform](../fourier_transform/theorems.ipynb#Integration-Theorem)) leading to the following relation\n",
+    "An integrable signal $x(t)$ for which the integral $\\int_{-\\infty}^{t} x(\\tau) \\; d\\tau$ exists is given. The integration can be represented as convolution with the rectangular signal $\\epsilon(t)$\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_{-\\infty}^{t} x(\\tau) \\; d\\tau = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot \\epsilon(t - \\tau) \\; d\\tau = \\epsilon(t) * x(t)\n",
     "\\end{equation}\n",
     "\n",
-    "Two-sided Laplace transformation of the left- and right-hand side, application of the convolution theorem and using the Laplace transform of the Heaviside signal $\\epsilon(t)$ yields\n",
+    "as illustrated below\n",
+    "\n",
+    "![Representation of an integration as convolution](integration_as_convolution.png)\n",
+    "\n",
+    "Two-sided Laplace transformation of the left- and right-hand side of above equation, application of the convolution theorem and using the Laplace transform of the Heaviside signal $\\epsilon(t)$ yields\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{L} \\left\\{ \\int_{-\\infty}^{t} x(\\tau) \\; d\\tau \\right\\} \n",
@@ -429,7 +423,7 @@
     "&= X(s-s_0)\n",
     "\\end{align}\n",
     "\n",
-    "where $X(s) = \\mathcal{L} \\{ x(t) \\}$. Modulation of the signal $x(t)$ leads to a shift of the $s$-plane into the direction given by the complex value $s_0$. Consequently, the ROC is also shifted \n",
+    "where $X(s) = \\mathcal{L} \\{ x(t) \\}$. Modulation of the signal $x(t)$ leads to a translation of the $s$-plane into the direction given by the complex value $s_0$. Consequently, the ROC is also shifted \n",
     "\n",
     "\\begin{equation}\n",
     "\\text{ROC} \\{ e^{s_0 t} \\cdot x(t) \\} = \\{s: s - \\Re \\{ s_0 \\} \\in \\text{ROC} \\{ x(t) \\} \\}\n",
@@ -485,9 +479,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
