--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -17,13 +17,13 @@
    "source": [
     "## Definition\n",
     "\n",
-    "The [Fourier transform](https://en.wikipedia.org/wiki/Fourier_transform), as used in the following, is defined as\n",
+    "The [Fourier transform](https://en.wikipedia.org/wiki/Fourier_transform), as commonly used in electrical engineering, is defined as\n",
     "\n",
     "\\begin{equation}\n",
     "X(j \\omega) = \\int_{-\\infty}^{\\infty} x(t) \\, e^{-j \\omega t} \\; dt\n",
     "\\end{equation}\n",
     "\n",
-    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ denotes the Fourier transform of $x(t)$. It is also termed as *spectrum* of the signal $x(t)$. The argument $j \\omega$ copes for the fact that the kernel $e^{-j \\omega t}$ of above [integral transform](https://en.wikipedia.org/wiki/Integral_transform) is a [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{s t}$ with $s= - j \\omega$. Other common definitions of the Fourier transform may be found in the literature. They differ with respect to the sign of the exponential function and normalization factors. Or the Fourier transform is evaluated in terms of the frequency $f$ instead of the angular frequency $\\omega = 2 \\pi f$. In both cases, the properties, theorems and transforms may differ from the results given here.\n",
+    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ denotes the Fourier transform of $x(t)$. It is also termed as *spectrum* of the signal $x(t)$. The argument $j \\omega$ copes for the fact that the kernel $e^{-j \\omega t}$ of above [integral transform](https://en.wikipedia.org/wiki/Integral_transform) is a [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{-s t}$ with $s= j \\omega$. Other common definitions of the Fourier transform may be found in the literature. They differ with respect to the sign of the exponential function and normalization factors. Or the Fourier transform is evaluated in terms of the frequency $f$ instead of the angular frequency $\\omega = 2 \\pi f$. In both cases, the properties, theorems and transforms may differ from the ones given here.\n",
     "\n",
     "A sufficient but not necessary condition for the existence of the Fourier transform of a given signal $x(t)$ is\n",
     "\n",
@@ -46,15 +46,15 @@
    "source": [
     "### Relation to the Laplace Transform\n",
     "\n",
-    "The Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a signal $x(t)$ can be related to its Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ by inspecting the kernels of both transforms. The [Laplace transform](../laplace_transform/definition.ipynb) has the complex exponential function $e^{- s t}$ with $s \\in \\mathbb{C}$ as kernel. The Fourier transform, as introduced before, has the harmonic exponential function $e^{- j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $s = \\sigma + j \\omega$. Hence, if the ROC includes the imaginary axis $s = j \\omega$ of the $s$-plane, the Fourier transform of a signal $x(t)$ can be derived from its Laplace transform by\n",
+    "The Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a signal $x(t)$ can be related to its Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ by inspecting the kernels of both transforms. The [Laplace transform](../laplace_transform/definition.ipynb) has the complex exponential function $e^{- s t}$ with $s \\in \\mathbb{C}$ as kernel. The Fourier transform, as introduced above, has the harmonic exponential function $e^{- j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $s = \\sigma + j \\omega$. Hence, if the ROC includes the imaginary axis $s = j \\omega$ of the $s$-plane, the Fourier transform of a signal $x(t)$ can be derived from its Laplace transform by\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ x(t) \\} = \\mathcal{L} \\{ x(t) \\} \\bigr\\rvert_{s = j \\omega}\n",
     "\\end{equation}\n",
     "\n",
-    "If the ROC includes the imaginary axis $s = j \\omega$ and the integration path of the inverse Laplace transform is chosen along the imaginary axis $\\sigma = 0$, the inverse Laplace transform becomes identical to the inverse Fourier transform. If the ROC does not include the imaginary axis, the Fourier transform of a given signal $x(t)$ does not exist. \n",
+    "If the ROC does not include the imaginary axis, the Fourier transform of a given signal $x(t)$ does not exist. If the ROC includes the imaginary axis $s = j \\omega$ and the integration path of the inverse Laplace transform is chosen along the imaginary axis $\\sigma = 0$, the inverse Laplace transform becomes identical to the inverse Fourier transform.\n",
     "\n",
-    "A benefit of the Laplace over the Fourier transform is that it can be applied to a wider class of signals. The one-sided Laplace transform also allows to conveniently consider initial values of differential equations."
+    "A benefit of the Laplace over the Fourier transform is that it exists for a wider class of signals. The one-sided Laplace transform also allows to conveniently consider initial values of differential equations."
    ]
   },
   {
@@ -200,9 +200,9 @@
     "\n",
     "Note, that the value at $x = 0$ has been derived by applying [L'Hôpital's rule](https://en.wikipedia.org/wiki/L'H%C3%B4pital's_rule) to $\\frac{sin(x)}{x}$. The sinc function is an important function in (digital) signal processing and communications engineering. It has the following properties\n",
     "\n",
-    "1. Its maximum value is one at $x=1$\n",
+    "1. Its maximum value is one at $x=0$\n",
     "\n",
-    "2. It decays with $\\frac{1}{x}$\n",
+    "2. Its amplitude decays with $\\frac{1}{|x|}$\n",
     "\n",
     "3. Its zeros are located at $x_0 = n \\cdot \\pi$ for $n \\in \\mathcal{Z} \\setminus \\{0\\}$\n",
     "\n",
@@ -220,7 +220,7 @@
     "\\mathcal{L} \\{ \\text{rect}(t) \\} = \\frac{\\sinh \\left( \\frac{s}{2} \\right) }{\\frac{s}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "with $\\text{ROC} \\{ \\text{rect}(t) \\} = \\mathbb{C}$. Using $\\sinh (s) = -j \\sin(j s)$ and $s = j \\omega$ relates the Fourier to the Laplace transform of the rectangular signal\n",
+    "with the $\\text{ROC} \\{ \\text{rect}(t) \\} = \\mathbb{C}$. The FLaplace transform of the rectangular signal can be related to its Fourier transform by using $\\sinh (s) = -j \\sin(j s)$ with the substitution $s = j \\omega$\n",
     "\n",
     "\\begin{equation}\n",
     "\\frac{\\sinh \\left( \\frac{s}{2} \\right) }{\\frac{s}{2}} \\Bigg\\vert_{s= j \\omega} = \\frac{\\sin \\left( \\frac{\\omega}{2} \\right) }{\\frac{\\omega}{2}}\n",
