--- a/fourier_transform/properties.ipynb
+++ b/fourier_transform/properties.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# The Fourier Transform\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "x(t) = \\mathcal{F}^{-1} \\left\\{ \\mathcal{F} \\{ x(t) \\} \\right\\}\n",
     "\\end{equation}\n",
     "\n",
-    "A sufficient condition for the theorem to hold is that both the signal $x(t)$ and its Fourier transformation are absolutely integrable and $x(t)$ is continuous at the considered time $t$. For this type of signals, above relation can be proven by applying the definition of the Fourier transform and its inverse and rearranging terms. However, the invertibility of the Fourier transformation holds also for more general signals $x(t)$, composed for instance from Dirac delta functions."
+    "A sufficient condition for the theorem to hold is that both the signal $x(t)$ and its Fourier transformation are absolutely integrable and $x(t)$ is continuous at the considered time $t$. For this type of signals, above relation can be proven by applying the definition of the Fourier transform and its inverse and rearranging terms. However, the invertibility of the Fourier transformation holds also for more general signals $x(t)$, composed for instance from Dirac delta distributions."
    ]
   },
   {
@@ -96,13 +96,13 @@
     "x(t) &= \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} X(j \\omega) \\, e^{j \\omega t} \\; d\\omega\n",
     "\\end{align}\n",
     "\n",
-    "yields that both transforms are very similar in their structure. They differ only with respect to the normalization factor $2 \\pi$ and the sign of the exponential function. The duality principle of the Fourier transform can be deduced from this observation. Let's assume that we know the Fourier transformation $x_2(j \\omega)$ of a signal $x_1(t)$ \n",
+    "reveals that both are very similar in their structure. They differ only with respect to the normalization factor $2 \\pi$ and the sign of the exponential function. The duality principle of the Fourier transform can be deduced from this observation. Let's assume that we know the Fourier transformation $x_2(j \\omega)$ of a signal $x_1(t)$ \n",
     "\n",
     "\\begin{equation}\n",
     "x_2(j \\omega) = \\mathcal{F} \\{ x_1(t) \\}\n",
     "\\end{equation}\n",
     "\n",
-    "It follows from above observation that the Fourier transformation of the signal \n",
+    "It follows that the Fourier transformation of the signal \n",
     "\n",
     "\\begin{equation}\n",
     "x_2(j t) = x_2(j \\omega) \\big\\vert_{\\omega=t}\n",
@@ -114,7 +114,7 @@
     "\\mathcal{F} \\{ x_2(j t) \\} = 2 \\pi \\cdot x_1(- \\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "The duality principle of the Fourier transformation allows to carry over results from the time-domain to the spectral-domain and vice-versa. It can be used to derive new transforms from known transforms. This is illustrated at an example. Note, that the Laplace transformation shows no duality. This is due to the mapping from a complex signal $x(t)$ with real valued independent variable $t \\in \\mathbb{R}$ to its complex transform $X(s) \\in \\mathbb{C}$ with complex independent variable $s \\in \\mathbb{C}$."
+    "The duality principle of the Fourier transformation allows to carry over results from the time-domain to the spectral-domain and vice-versa. It can be used to derive new transforms from known transforms. This is illustrated at an example. Note, that the Laplace transformation shows no duality. This is due to the mapping of a complex signal $x(t)$ with real valued independent variable $t \\in \\mathbb{R}$ to its complex transform $X(s) \\in \\mathbb{C}$ with complex valued independent variable $s \\in \\mathbb{C}$."
    ]
   },
   {
@@ -132,7 +132,7 @@
     "Using the duality principle, the Fourier transform of $e^{-j \\omega_0 t}$ can be derived from this result by \n",
     "\n",
     "1. substituting $\\omega$ with $t$ and $\\tau$ with $\\omega_0$ on the right-hand side to yield the time-domain signal $e^{-j \\omega_0 t}$\n",
-    "2. substituting $t$ by $- \\omega$, $\\tau$ with $\\omega_0$ and multiplying the result by $2 \\pi$ on the left-hand side to yield its Fourier transform\n",
+    "2. substituting $t$ by $- \\omega$, $\\tau$ with $\\omega_0$ and multiplying the result by $2 \\pi$ on the left-hand side\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ e^{-j \\omega_0 t} \\} = 2 \\pi \\cdot \\delta(\\omega + \\omega_0)\n",
@@ -199,16 +199,30 @@
     "j \\underbrace{\\int_{-\\infty}^{\\infty} - x_\\text{o}(t) \\sin(\\omega t) \\; dt}_{X_\\text{o}(j \\omega)}\n",
     "\\end{align}\n",
     "\n",
-    "For the last equality the fact was exploited that an integral with symmetric limits is zero for odd functions. In order to conclude on the symmetry of $X(j \\omega)$ its behavior for a reverse of the sign of $\\omega$ has to be investigated. Due to the symmetry properties of $\\cos(\\omega t)$ and $\\sin(\\omega t)$, it follows that the Fourier transform of the\n",
+    "For the last equality the fact was exploited that an integral with symmetric limits is zero for odd functions. Note that the multiplication of an odd function with an even/odd function results in an even/odd function. In order to conclude on the symmetry of $X(j \\omega)$ its behavior for a reverse of the sign of $\\omega$ has to be investigated. Due to the symmetry properties of $\\cos(\\omega t)$ and $\\sin(\\omega t)$, it follows that the Fourier transform of the\n",
     "\n",
     "* even part $x_\\text{e}(t)$ is real valued with even symmetry $X_\\text{e}(j \\omega) = X_\\text{e}(-j \\omega)$\n",
-    "* odd part $x_\\text{o}(t)$ is imaginary with odd symmetry $X_\\text{o}(j \\omega) = - X_\\text{o}(-j \\omega)$\n",
+    "* odd part $x_\\text{o}(t)$ is imaginary valued with odd symmetry $X_\\text{o}(j \\omega) = - X_\\text{o}(-j \\omega)$\n",
     "\n",
     "Combining this, it can be concluded that the Fourier transform $X(j \\omega)$ of a real-valued signal $x(t) \\in \\mathbb{R}$ shows complex conjugate symmetry\n",
     "\n",
     "\\begin{equation}\n",
     "X(j \\omega) = X^*(- j \\omega)\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "It follows that the magnitude spectrum $|X(j \\omega)|$ of a real-valued signal shows even symmetry\n",
+    "\n",
+    "\\begin{equation}\n",
+    "|X(j \\omega)| = |X(- j \\omega)|\n",
+    "\\end{equation}\n",
+    "\n",
+    "and the phase $\\varphi(j \\omega) = \\arg \\{ X(j \\omega) \\}$ odd symmetry\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\varphi(j \\omega) = - \\varphi(- j \\omega)\n",
+    "\\end{equation}\n",
+    "\n",
+    "Due to these symmetries, both are often plotted only for positive frequencies $\\omega \\geq 0$. However, without the information that the signal is real-valued it is not possible to conclude on the magnitude spectrum and phase for the negative frequencies $\\omega < 0$."
    ]
   },
   {
