--- a/fourier_transform/theorems.ipynb
+++ b/fourier_transform/theorems.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# The Fourier Transform\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "\\mathcal{F} \\{ x(a t) \\} = \\frac{1}{|a|} \\cdot X \\left( \\frac{j \\omega}{a} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The Fourier transformation of a temporally scaled signal is given by inverse scaling of the Fourier transform of the unscaled signal and weighting with $\\frac{1}{|a|}$. This relation is known as scaling theorem of the Fourier transform. It can be proven by introducing the scaled signal $x(a t)$ into the definition of the Fourier transformation together with the substitution $t' = a t$."
+    "The Fourier transformation of a temporally scaled signal is given by inverse scaling of the Fourier transform of the unscaled signal and weighting with $\\frac{1}{|a|}$. This relation is known as scaling theorem of the Fourier transform. It can be proven by introducing the scaled signal $x(a t)$ into the definition of the Fourier transformation together with the substitution $t' = a t$. Note that the cases $a<0$ and $a>0$ have to be regarded separately."
    ]
   },
   {
@@ -47,7 +47,7 @@
     "\\mathcal{F} \\{ \\text{rect}(a t) \\} = \\frac{1}{|a|} \\cdot \\text{sinc} \\left( \\frac{\\omega}{2 a} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "This can be proven by evaluating the Fourier transformation for $\\text{rect}(a t)$"
+    "This can be confirmed by explicitly calculating the Fourier transformation of $\\text{rect}(a t)$"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "### Convolution Theorem\n",
     "\n",
-    "The [convolution theorem](https://en.wikipedia.org/wiki/Convolution_theorem) states that the Fourier transform of the convolution of two signals $x(t)$ and $y(t)$ is equal to the scalar multiplication of their Fourier transforms $X(j \\omega)$ and $Y(j \\omega)$\n",
+    "The [convolution theorem](https://en.wikipedia.org/wiki/Convolution_theorem) states that the Fourier transform of the convolution of two signals $x(t)$ and $y(t)$ is equal to the scalar multiplication of their Fourier transforms $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ and $Y(j \\omega) = \\mathcal{F} \\{ y(t) \\}$\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ x(t) * y(t) \\} = X(j \\omega) \\cdot Y(j \\omega)\n",
@@ -130,12 +130,14 @@
     "&= Y(j \\omega) \\cdot X(j \\omega)\n",
     "\\end{align}\n",
     "\n",
-    "under the assumption that both Fourier transforms $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ and $Y(j \\omega) = \\mathcal{F} \\{ y(t) \\}$ exist.\n",
+    "under the assumption that both Fourier transforms $X(j \\omega)$ and $Y(j \\omega)$ exist.\n",
     "\n",
     "The convolution theorem is very useful in the context of linear time-invariant (LTI) systems. The output signal $y(t)$ of an LTI system is given as the convolution of the input signal $x(t)$ with the impulse response $h(t)$. Hence, the signals and the system can be represented equivalently in the time and frequency domain\n",
     "\n",
     "![Representation of an LTI system in the time- and Fourier-domain](LTI_system_Fourier_domain.png)\n",
     "\n",
+    "\n",
+    "where $H(j \\omega) = \\mathcal{F} \\{ h(t) \\}$.\n",
     "Calculation of the system response by transforming the problem into the Fourier domain can be beneficial since this replaces the evaluation of the convolution integral by a scalar multiplication. The (inverse) Fourier transforms are known for many signals or can be derived by applying the properties and theorems to standard signals and their transforms. This procedure simplifies the calculation of the system response significantly in many cases.\n",
     "\n",
     "The convolution theorem can also be useful to derive an unknown Fourier transform. The key is here to express the signal as convolution of two other signals for which the Fourier transforms are known. This is illustrated at the following example."
@@ -197,7 +199,7 @@
    "source": [
     "### Temporal Shift Theorem\n",
     "\n",
-    "The [temporal shift of a signal](../continuous_signals/operations.ipynb#Temporal-Shift) $x(t)$ can be expressed by a convolution with a shifted Dirac impulse\n",
+    "The [temporal shift](../continuous_signals/operations.ipynb#Temporal-Shift) $x(t-\\tau)$ of a signal $x(t)$ can be expressed by a convolution with a shifted Dirac impulse\n",
     "\n",
     "\\begin{equation}\n",
     "x(t - \\tau) = x(t) * \\delta(t - \\tau)\n",
@@ -240,7 +242,7 @@
     "\n",
     "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$. The Fourier transform $\\mathcal{F} \\{ \\frac{d \\delta(t)}{dt} \\} = j \\omega$ can be derived by applying the definition of the Fourier transform together with the derivation property of the Dirac impulse. Above result is known as differentiation theorem of the Fourier transform. It states that the differentiation of a signal in the time domain is equivalent to a multiplication of its spectrum by $j \\omega$. \n",
     "\n",
-    "The main applications of the differentiation theorem are the transformation of differential equations or the derivation of transforms of signals which can be expressed as derivatives of other signals. This latter illustrated by the following example. "
+    "The main applications of the differentiation theorem are the transformation of differential equations or the derivation of transforms of signals which can be expressed as derivatives of other signals. This latter is illustrated by the following example. "
    ]
   },
   {
@@ -289,7 +291,9 @@
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ \\epsilon(t) \\} = \\frac{1}{j \\omega} + \\pi \\cdot \\delta(\\omega)\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "The Fourier transformation of the Heaviside signal plays an important role in the context of [analytic signals](https://en.wikipedia.org/wiki/Analytic_signal) and their generation by the [Hilbert transform](https://en.wikipedia.org/wiki/Hilbert_transform)."
    ]
   },
   {
@@ -319,7 +323,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "A signal whose amplitude increases over a finite temporal interval to a finite value can be defined as\n",
+    "A signal whose amplitude increases linear over a finite temporal interval to a finite value can be defined as\n",
     "\n",
     "\\begin{equation}\n",
     "x(t) = \\begin{cases}\n",
@@ -450,7 +454,7 @@
     "\n",
     "* What happens if you change the angular frequency $\\omega_0$ of the signal?\n",
     "\n",
-    "* Assume a signal that is composed from a superposition of two finite length cosine signals with different frequencies. What qualitative condition has to hold that you can derive these frequencies from the spectrum?"
+    "* Assume a signal that is composed from a superposition of two finite length cosine signals with different frequencies. What qualitative condition has to hold that you can derive these frequencies from the spectrum of the superposition?"
    ]
   },
   {
@@ -487,7 +491,7 @@
     "\\mathcal{F} \\{ e^{j \\omega_0 t} \\cdot x(t) \\} = 2 \\pi \\cdot \\Lambda(\\omega - \\omega_0)\n",
     "\\end{equation}\n",
     "\n",
-    "The spectrum of the modulated signal has non-zero contributions for $\\omega_0 -1 < \\omega < \\omega_0 + 1$. For a large $\\omega_0$ it only occupies a small part of the spectrum. This is a important property of signals used for wireless transmission. The signal $y(t)$ is defined"
+    "The spectrum of the modulated signal has non-zero contributions for $\\omega_0 -1 < \\omega < \\omega_0 + 1$. For large $\\omega_0$ it only occupies a small part of the spectrum. This is an important property of signals used for wireless transmission. The signal $y(t)$ is defined"
    ]
   },
   {
@@ -551,7 +555,7 @@
     "\\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} X(j \\eta) \\cdot X^*(-j (\\omega - \\eta)) \\, d\\eta\n",
     "\\end{equation}\n",
     "\n",
-    "and assuming $\\omega = 0$ yields the desired relation\n",
+    "and setting $\\omega = 0$ yields the desired relation\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_{-\\infty}^{\\infty} | x(t) |^2 \\; dt = \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} | X(j \\omega) |^2 \\; d\\omega\n",
